--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,9 +28,13 @@ dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    testImplementation 'junit:junit:4.12'
+    testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
     implementation 'me.toptas.fancyshowcase:fancyshowcaseview:1.3.0'
+
+    implementation 'com.elconfidencial.bubbleshowcase:bubbleshowcase:1.3.1'
+
+    implementation 'com.github.amlcurran.showcaseview:library:5.4.3'
 }
