--- a/build.gradle
+++ b/build.gradle
@@ -5,13 +5,11 @@ buildscript {
     repositories {
         google()
         jcenter()
-        maven {
-            url "https://jitpack.io"
-        }
 
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.6.1'
+        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
         
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -23,7 +21,8 @@ allprojects {
     repositories {
         google()
         jcenter()
-        
+        mavenLocal()
+        maven { url 'https://jitpack.io' }
     }
 }
 
