--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,9 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    
+
     repositories {
+        maven { url "https://jitpack.io" }
         google()
         jcenter()
 
@@ -21,8 +22,7 @@ allprojects {
     repositories {
         google()
         jcenter()
-        mavenLocal()
-        maven { url 'https://jitpack.io' }
+        maven { url "https://jitpack.io" }
     }
 }
 
